// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component applies custom data-testid when provided 1`] = `
<button
  class="px-4 py-2 rounded transition-colors focus:outline-none focus:ring-2 
    bg-blue-500 text-white hover:bg-blue-600 focus:ring-blue-300"
  data-testid="custom-button"
>
  Custom TestID
</button>
`;

exports[`Button Component applies disabled attribute when disabled prop is true 1`] = `
<button
  class="px-4 py-2 rounded transition-colors focus:outline-none focus:ring-2 
    bg-blue-500 text-white hover:bg-blue-600 focus:ring-blue-300 
    opacity-50 cursor-not-allowed"
  data-testid="button"
  disabled=""
>
  Disabled
</button>
`;

exports[`Button Component renders button with children 1`] = `
<button
  class="px-4 py-2 rounded transition-colors focus:outline-none focus:ring-2 
    bg-blue-500 text-white hover:bg-blue-600 focus:ring-blue-300"
  data-testid="button"
>
  Click me
</button>
`;
